# html-table-parse

./: README.md  README.rst  pyproject.toml
html_table_parse/: __init__.py
tests/: test___init__.py
