[build-system]
requires = ['uv_build>=0.8.3,<0.9.0']
build-backend = 'uv_build'

[project]
name = 'html-table-parse'
version = "0.2.1"
authors = [{ name = '5j9', email = '5j9@users.noreply.github.com' }]
description = 'Parse HTML table as Python list or dict'
readme = 'README.md'
requires-python = '>=3.14'
dependencies = [
    "lxml>=6.1.1",
]
license = { text = 'GPL-3.0' }

[project.urls]
Homepage = 'https://github.com/5j9/html-table-parse'


[tool.uv.build-backend]
module-root = ''
module-name = "html_table_parse"


[tool.ruff]
line-length = 79
format.quote-style = 'single'
lint.isort.combine-as-imports = true
lint.extend-select = [
    'W605', # invalid-escape-sequence
    'FA',   # flake8-future-annotations
    'I',    # isort
    'UP',   # pyupgrade
    'RUF',  # Ruff-specific rules (RUF)
]
lint.ignore = [
    'E721',   # Do not compare types, use `isinstance()`
    'RUF001', # ambiguous-unicode-character-string
    'RUF002', # ambiguous-unicode-character-docstring
    'RUF003', # ambiguous-unicode-character-comment
    'RUF012', # mutable-class-default
    'RUF059', # Unpacked variable never used
]

[tool.pytest.ini_options]
addopts = '--quiet --tb=short'
[tool.pyright]
typeCheckingMode = 'standard'
reportInvalidStringEscapeSequence = false
reportConstantRedefinition = 'error'
reportDeprecated = 'warning'
reportPropertyTypeMismatch = 'error'
reportTypeCommentUsage = 'warning'
reportUnnecessaryCast = 'warning'
reportUnnecessaryComparison = 'warning'
reportUnnecessaryContains = 'warning'
reportUnnecessaryIsInstance = 'warning'
reportUnnecessaryTypeIgnoreComment = 'warning'
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
